syntax = "proto3";
import "Role.proto";
//protoc --proto_path=src\main\java\com\game\protobuf --java_out=src\main\java src\main\java\com\game\protobuf\MsgRoleInfo.proto

option java_package = "com.hailintang.client.protobuf.protoc";
option java_outer_classname = "MsgGangInfoProto";

enum RequestType{
    CREATEGANG = 0;
    JOINGANG = 1;
    DISMISSGANG = 2;
    DONATEMONEY = 3;
}

message RequestGangInfo{
    string requestId = 1;       // 请求id
    int32 userId = 2;           // 请求的uid
    string gangName = 3;            //目的地
    RequestType type = 4;      // 请求类型
    string number = 5;
}

message ResponseGangInfo{
    int32 result = 1;           // 返回结果
    int32 userId = 2;           // 返回的uid
    string content = 3;         // 返回内容

    RequestType type = 4;       // 返回类型

    Role role = 5;          // 用户角色
}